libraries/ckit/regression/valid-programs/a236.c
int a[1];

int *p = a;

void main () {
  return;
}
